[gd_scene load_steps=11 format=2]

[ext_resource path="res://Font/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/scene_2.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=4]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.85098, 0.34902, 0.117647, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.94902, 0.396078, 0.133333, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="back" type="Button" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 12.0
margin_bottom = 20.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="more" type="Button" parent="."]
margin_left = 128.0
margin_top = 30.0
margin_right = 199.0
margin_bottom = 73.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
text = "More"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_to_scene_1" type="Button" parent="."]
margin_left = 40.0
margin_top = 540.0
margin_right = 108.0
margin_bottom = 566.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Scene 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_to_scene_3" type="Button" parent="."]
margin_left = 148.0
margin_top = 540.0
margin_right = 216.0
margin_bottom = 566.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "Scene 3"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="back" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="more" to="." method="_on_more_pressed"]
[connection signal="pressed" from="go_to_scene_1" to="." method="_on_go_to_scene_1_pressed"]
[connection signal="pressed" from="go_to_scene_3" to="." method="_on_go_to_scene_3_pressed"]
